better tabcomplete and use MessageManager